# synergy-way

./: docker-compose.yml  main.py
alembic/versions/: 31a78aaaf8e9_models.py
app/: .env  Dockerfile  README.md  pyproject.toml
app/alembic/: env.py
app/core/: config.py  database.py  logger_config.py
app/users/: interfaces.py  models.py
app/users/infrastructure/: repository.py
postgresql-db/: .pg-env
tests/: test_users.py
users/: service.py  tasks.py
users/infrastructure/: api_client.py
